# scikit-report

./: .gitignore  LICENSE  README.md  basic_example.pptx  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
envs/: dev.yml
examples/: basic_example.py
skreport/: __init__.py
skreport/examples/: basic_example.py
skreport/models/: PictureContentModel.py  ReportModel.py  SlidePanelModel.py
skreport/pptx/: ContentViewABC.py  PptxReportView.py  __init__.py
skreport/pptx/content_views/: BulletedListContentView.py  DictTableContentView.py  PictureContentView.py  TextContentView.py  __init__.py
skreport/templates/: DefaultTemplate.py  Template.py
tests/: test_PptxReportView.py
