[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "scikit-report"
version = "0.0.1"
authors = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
]
description = "A library for generating well formatted technical reports and exports them to a variety of formats"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.urls]
"homepage" = "https://github.com/cascode-labs/scikit-report"

[tool.flit.module]
name = "skreport"
